[gd_scene load_steps=5 format=3 uid="uid://ci02nm2lvfwcn"]

[ext_resource type="Script" uid="uid://g4xafxdll8gy" path="res://scripts/hazard-scripts/clock.gd" id="1_sowhd"]
[ext_resource type="Texture2D" uid="uid://dkuu54xokh6qe" path="res://art/hazard_art/Brain.png" id="2_sowhd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d61iv"]
radius = 15.508062

[sub_resource type="CircleShape2D" id="CircleShape2D_xcpa5"]
radius = 15.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 4
collision_mask = 2
gravity_scale = 0.167
script = ExtResource("1_sowhd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sowhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("CircleShape2D_d61iv")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_xcpa5")

[node name="GameOverTimer" type="Timer" parent="Hitbox"]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Hitbox/GameOverTimer" to="." method="_on_game_over_timer_timeout"]
